Fix button spacing

--- a/styles/general.css
+++ b/styles/general.css
@@ -91,9 +91,15 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  gap: 30px;
+  gap: 60px;
   padding: 20px;
   box-sizing: border-box;
+}
+
+.section2-content > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .section2-buttons {
@@ -102,6 +108,7 @@
   margin-bottom: 0px;
   margin-left: 32px;
   font-size: 15px;
+  margin-left: 0;
   background-color: black;
   color: white;
   padding: 10px 40px;
